--- a/index.html
+++ b/index.html
@@ -265,12 +265,14 @@
               <input class="write-us__input" type="text" name="name" id="your-name" placeholder="Имя Фамилия" required>
             </p>
             <p class="wrapper-email">
-              <label class="write-us__label" for="your-email" req>Ваш email:</label>
-              <input class="write-us__input" type="email" name="email" id="your-email" placeholder="email@example.com" required>
+              <label class="write-us__label" for="your-email">Ваш email:</label>
+              <input class="write-us__input" type="email" name="email" id="your-email" placeholder="email@example.com"
+                required>
             </p>
             <p class="wrapper-text">
               <label class="write-us__label" for="your-text">Текст письма:</label>
-              <textarea class="write-us__textarea" name="text" id="your-text" cols="61" rows="6" placeholder="В свободной форме" required></textarea>
+              <textarea class="write-us__textarea" name="text" id="your-text" cols="61" rows="6" placeholder="В свободной форме"
+                required></textarea>
             </p>
           </div>
           <div class="wrapper-answer-btn">
@@ -322,7 +324,7 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=e5bbda38-1328-4438-9f35-6b2fd9695d7d&lang=ru_RU" type="text/javascript">
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=e5bbda38-1328-4438-9f35-6b2fd9695d7d&lang=ru_RU"></script>
 </body>
 
 </html>
