stylized catolog and fix maps

--- a/catalog.html
+++ b/catalog.html
@@ -67,9 +67,9 @@
   <main class="main-content">
     <div class="container">
       <ul class="breadcrumbs">
-        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link" aria-label="Главная"></a></li>
-        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Каталог</a></li>
-        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Инструмент</a></li>
+        <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link breadcrumbs__trail" aria-label="Главная"></a></li>
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__trail">Каталог</a></li>
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__trail">Инструмент</a></li>
         <li class="breadcrumbs__item"><a class="breadcrumbs__link">Перфораторы</a></li>
       </ul>
       <div class="name-product">
