--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
         <button class="about__contacts-write-us">Заблудились? Напишите нам!</button>
       </div>
       <div id="map" class="popup-map">
+        <img class="popup-map__img" src="img/map-big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <button class="popup-map__close" aria-label="Закрыть"></button>
       </div>
       <div class="write-us">
