stylized filter and popup-buy

--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
           </div>
         </article>
       </div>
+      <div class="popup-order">
+          <div class="wrapper-popup-order__title">
+            <p class="popup-order__title">Товар добавлен в корзину!</p>
+          </div>
+          <div class="wrapper-popup-order__link">
+            <a href="#" class="popup-order__link popup-modal__order_red">Оформить заказ</a>
+            <a href="#" class="popup-order__link">Продолжить покупки</a>
+          </div>
+          <button class="popup-order__close" aria-label="Закрыть"></button>
+        </div>
     </section>
     <section class="popular-manufacturers container">
       <div class="wrapper-row">
